--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
   border-top: 5px solid #7e7e7e;  
-  background: url("img/white-scratone.png");
+  background: transparent url(../images/white-scratone.png);
   font: 16 px Impact, sans-serif;
   margin: 0;
   border-top: 5px solid #7e7e7e; 
@@ -29,4 +29,9 @@ p {
 }
 header {
 	padding: 20px 0;
+}
+.top-menu li {
+	display: inline-block;
+	padding: 10px 30px;
+	margin: 0;
 }
