--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
   border-top: 5px solid #7e7e7e;  
-  background: transparent url(../images/white-scratone.png);
+  background: url(../images/white-scratone.png);
   font: 16 px Impact, sans-serif;
   margin: 0;
   border-top: 5px solid #7e7e7e; 
